crates/swc_ecma_react_compiler/tests/fixtures/upstream/error.invalid-uncalled-function-capturing-mutable-values-memoizes-with-captures-values/error.txt
Found 1 error:

Error: Cannot modify local variables after render completes

This argument is a function which may reassign or mutate `cache` after render, which can cause inconsistent behavior on subsequent renders. Consider using state instead.

  19 |   map: TInput => TOutput
  20 | ): TInput => TOutput {
> 21 |   return useMemo(() => {
     |          ^^^^^^^^^^^^^^^
> 22 |     // The original issue is that `cache` was not memoized together with the returned
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 23 |     // function. This was because neither appears to ever be mutated — the function
     …
> 35 |       return output;
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 36 |     };
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 37 |   }, [map]);
     | ^^^^^^^^^^^^ This function may (indirectly) reassign or modify `cache` after render
  38 | }
  39 |

  31 |       if (output == null) {
  32 |         output = map(input);
> 33 |         cache.set(input, output);
     |         ^^^^^ This modifies `cache`
  34 |       }
  35 |       return output;
  36 |     };
